Add JDK 21 readiness: Pack200 fallback, webstart-it, and release workflow
Enable building and running the webstart-maven-plugin on modern JDKs
where java.util.jar.Pack200 is unavailable. When Pack200 is configured
but cannot run on the build JDK, the plugin logs a warning and continues
the build successfully.

- Add Pack200Support with reflection-based JDK Pack200 and runtime
detection
- Apply isEffectivePack200() in JNLP mojos so JNLP output matches actual
processing
- Add standalone webstart-it integration project (outside the parent
reactor)
- Add manual release workflow for versioned branches, tags, and GitHub
Packages

Closes #3